k8s/05-ventas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-api
  namespace: examen-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ventas-api
  template:
    metadata:
      labels:
        app: ventas-api
    spec:
      containers:
        - name: ventas-api
          image: 542768639545.dkr.ecr.us-east-1.amazonaws.com/ventas-api:eks-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
