k8s/07-despachos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despachos-api
  namespace: examen-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: despachos-api
  template:
    metadata:
      labels:
        app: despachos-api
    spec:
      containers:
        - name: despachos-api
          image: 542768639545.dkr.ecr.us-east-1.amazonaws.com/despachos-api:eks-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
