k8s/09-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-despacho
  namespace: examen-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-despacho
  template:
    metadata:
      labels:
        app: front-despacho
    spec:
      containers:
        - name: front-despacho
          image: 542768639545.dkr.ecr.us-east-1.amazonaws.com/front-despacho:eks-v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
