k8s/06-ventas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ventas-api
  namespace: examen-devops
spec:
  selector:
    app: ventas-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
