k8s/08-despachos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: despachos-api
  namespace: examen-devops
spec:
  selector:
    app: despachos-api
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
