k8s/10-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-despacho
  namespace: examen-devops
spec:
  selector:
    app: front-despacho
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
