k8s/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examen-devops-ingress
  namespace: examen-devops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tienda.local
      http:
        paths:
          - path: /api/v1/ventas
            pathType: Prefix
            backend:
              service:
                name: ventas-api
                port:
                  number: 8080
          - path: /api/v1/despachos
            pathType: Prefix
            backend:
              service:
                name: despachos-api
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-despacho
                port:
                  number: 80
